# pman

./: pyproject.toml
pman/: api.py  models.py  schemas.py  scratchpad.py
