[tool.poetry]
name = "pman"
version = "0.0.0"
description = "Investment Portfolio Manager"
authors = ["Nicolas signed-log FORMICHELLA <stigpro@outlook.fr>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.26"}
click = "^8.1.7"
argon2-cffi = "^23.1.0"
yfinance = "^0.2.36"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "Q",
  "RUF",
  "PERF",
  "TRY",
  "FIX",
  "ARG",
  "TCH",
  "TID",
  "SIM",
  "RET",
  "RSE",
  "Q",
  "PT",
  "N",
  "D",
  "I",
  "ANN",
  "S",
  "BLE",
  "B",
  "A",
  "C4",
  "COM",
  "FA",
  "ICN",
  "PIE",
  "PYI",
  "PL"
]
ignore = [
  "D407",
  "S101",
  "COM812",
  "D211",
  "D212",
  "W191",
  "E114",
  "E117",
  "D206",
  "D300",
  "D406",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"